--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "author": "osi",
   "license": "MIT",
   "dependencies": {
+    "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "mysql2": "^3.6.5",
+    "promisify": "^0.0.3",
     "telegraf": "^4.15.3",
     "winston": "^3.11.0"
   },
