--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 # Телеграм
-BOT_TOKEN=
+BOT_TOKEN=6882737410:AAF21s0R7zXRbDbvtF5LuJZ1f-CCI5ewtEw
 
 # База данных
-mysql_host=
-mysql_user=
-mysql_password=
-mysql_database=
+mysql_host=localhost
+mysql_user=debian-sys-maint
+mysql_password=B~&&N5dh@eS;w{9jn$^w>d~LX]V{b_
+mysql_database=notcoin_bot
+
+NODE_ENV=development
