--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nothing-cube-admin-panel",
   "version": "1.0.0",
   "description": "Admin Panel for Nothing cube bot. Happy new year Maxim!",
-  "main": "src/main.js",
+  "main": "main.js",
   "author": "osi",
   "license": "MIT",
   "dependencies": {
